Scrollbar fixes (#4628)
* fix/update scrollbars

* undo rename

* update scrollable

* lint

--- a/app/packages/spotlight/src/styles.module.css
+++ b/app/packages/spotlight/src/styles.module.css
@@ -9,29 +9,11 @@
   overflow: auto;
   overscroll-behavior: contain;
 
-  --light-color: var(--fo-palette-text-tertiary);
-  --dark-color: var(--fo-palette-background-level2);
+  --scrollbar-color: var(--fo-palette-text-tertiary);
 }
 
-.spotlightLoaded {
-  background: var(--fo-palette-background-level2);
-}
-
-.spotlight.scrollbar::-webkit-scrollbar-track {
-  width: 14px;
-  box-shadow: inset 0 0 14px 14px var(--dark-color);
-}
-
-.spotlight.scrollbar::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px var(--light-color);
-  border-radius: 0;
-}
-
-.spotlightSection {
-  position: absolute;
-  display: block;
-  padding-left: 14px;
-  width: 100%;
+.spotlight::-webkit-scrollbar {
+  width: 0;
 }
 
 .spotlightContainer {
@@ -44,6 +26,23 @@
 .spotlightContainer:focus {
   border: none;
   outline: none;
+}
+
+.spotlightLoaded {
+  background: var(--fo-palette-background-level2);
+}
+
+@-moz-document {
+  .spotlight {
+    scrollbar-width: none;
+  }
+}
+
+.spotlightSection {
+  position: absolute;
+  display: block;
+  padding-left: 14px;
+  width: 100%;
 }
 
 .spotlightRow {
@@ -61,4 +60,39 @@
 
 .spotlightRow.spotlightRowHidden > div > div {
   display: none;
+}
+
+
+/* SCROLLBAR */
+
+.scrollbar {
+  --scrollbar-color: var(--fo-palette-text-tertiary);
+}
+
+@-moz-document url-prefix() {
+  .scrollbar {
+    scrollbar-color: var(--scrollbar-color) transparent;
+    scrollbar-width: thin;
+  }
+}
+
+.scrollbar::-webkit-scrollbar {
+  height: 14px;
+  width: 14px;
+}
+
+.scrollbar::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 14px 14px transparent;
+  height: 14px;
+  width: 14px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  border: solid 3px transparent;
+  border-radius: 0;
+  box-shadow: inset 0 0 8px 8px var(--scrollbar-color);
 }
